<resources>
    <string name="app_name">ExeNote</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Add">+\n</string>
    <string name="title">Title</string>
    <string name="description">description</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="Back">➜</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
</resources>