<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#faf0f0"
    tools:context=".Fragments.RecordingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ScrollViewCount">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:rotation="180"
                android:text="@string/Back"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTitle"
                style="@android:style/Widget.Material.Toolbar.Button.Navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/background_white"
                android:elevation="12dp"
                android:hint="@string/title_hint"
                android:lines="2"
                android:paddingStart="18dp"
                android:textColor="@color/black"
                android:textSize="32sp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/editDescription"
                style="@android:style/Widget.Material.Toolbar.Button.Navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/background_white"
                android:elevation="24dp"
                android:focusable="true"
                android:gravity="top"
                android:hint="@string/description_hint"
                android:inputType="textMultiLine"
                android:lines="6"
                android:paddingStart="18dp"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:scrollbars="vertical"
                android:textColor="@color/black"
                android:textSize="32sp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#F07929"
        android:text="@string/save"
        android:textColor="#ededed"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.985" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#F07929"
        android:text="@string/update"
        android:textColor="#ededed"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>